fix(examples): align explosive debris fragments