@@ -5,6 +5,8 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
+import com.hypixel.hytale.protocol.EntityPart;
+import com.hypixel.hytale.server.core.asset.type.model.config.ModelParticle;
 import com.hypixel.hytale.server.core.entity.ExplosionConfig;
 import java.lang.reflect.Field;
 import java.util.ArrayList;
@@ -25,6 +27,12 @@ class ExplosiveBlockRuntimeTest {
         assertEquals(0, intField(config, "blockDamageRadius"));
         assertEquals(4.0f, floatField(config, "entityDamageRadius"), 0.0001f);
         assertEquals(0.0f, floatField(config, "blockDropChance"), 0.0001f);
+        assertEquals("SFX_Goblin_Lobber_Bomb_Death", objectField(config, "soundEventId"));
+
+        ModelParticle[] particles = (ModelParticle[]) objectField(config, "particles");
+        assertEquals(1, particles.length);
+        assertEquals("Explosion_Medium", particles[0].getSystemId());
+        assertEquals(EntityPart.Entity, particles[0].getTargetEntityPart());
     }
 
     @Test
@@ -90,14 +98,14 @@ class ExplosiveBlockRuntimeTest {
         assertEquals("Hytale:block/stone", group.blockType());
         assertEquals(3, group.blockCount());
         assertEquals(new Vector3d(1.5, 10.5, 0.5), group.center());
-        assertEquals(1.48f, group.halfExtentX(), 0.0001f);
-        assertEquals(0.48f, group.halfExtentY(), 0.0001f);
-        assertEquals(0.48f, group.halfExtentZ(), 0.0001f);
+        assertEquals(1.5f, group.halfExtentX(), 0.0001f);
+        assertEquals(0.5f, group.halfExtentY(), 0.0001f);
+        assertEquals(0.5f, group.halfExtentZ(), 0.0001f);
         assertEquals(3.0f, group.mass(), 0.0001f);
     }
 
     @Test
-    void groupedFragmentsExposeEveryBlockAsLocalVisualOffset() {
+    void groupedFragmentVisualsUseBlockBasePositionsAndSyncOffsets() {
         List<ExplosiveBlockRuntime.FragmentGroup> groups = ExplosiveBlockRuntime.groupFragments(
             List.of(
                 new ExplosiveBlockRuntime.FragmentBlock("Hytale:block/stone", 0, 10, 0),
@@ -110,12 +118,34 @@ class ExplosiveBlockRuntimeTest {
         List<ExplosiveBlockRuntime.FragmentVisual> visuals = groups.getFirst().visualBlocks();
 
         assertEquals(3, visuals.size());
-        assertVectorEquals(new Vector3d(1.5, 10.0, 0.5), visuals.get(0).position());
-        assertVectorEquals(new Vector3f(0.0f, -0.02f, 0.0f), visuals.get(0).localPositionOffset());
+        assertVectorEquals(new Vector3d(1.5, 10.0, 0.5), visuals.getFirst().position());
+        assertVectorEquals(new Vector3f(0.0f, 0.0f, 0.0f), visuals.get(0).localPositionOffset());
+        assertVisualSyncsToSpawnPosition(groups.getFirst(), visuals.get(0));
         assertVectorEquals(new Vector3d(0.5, 10.0, 0.5), visuals.get(1).position());
-        assertVectorEquals(new Vector3f(-1.0f, -0.02f, 0.0f), visuals.get(1).localPositionOffset());
+        assertVectorEquals(new Vector3f(-1.0f, 0.0f, 0.0f), visuals.get(1).localPositionOffset());
+        assertVisualSyncsToSpawnPosition(groups.getFirst(), visuals.get(1));
         assertVectorEquals(new Vector3d(2.5, 10.0, 0.5), visuals.get(2).position());
-        assertVectorEquals(new Vector3f(1.0f, -0.02f, 0.0f), visuals.get(2).localPositionOffset());
+        assertVectorEquals(new Vector3f(1.0f, 0.0f, 0.0f), visuals.get(2).localPositionOffset());
+        assertVisualSyncsToSpawnPosition(groups.getFirst(), visuals.get(2));
+    }
+
+    @Test
+    void groupedFragmentVisualsUseBlockTypeCenterForVisualBase() {
+        List<ExplosiveBlockRuntime.FragmentGroup> groups = ExplosiveBlockRuntime.groupFragments(
+            List.of(new ExplosiveBlockRuntime.FragmentBlock("Hytale:block/offset",
+                4,
+                10,
+                -2,
+                new Vector3d(0.25, 0.5, 0.75))),
+            new Vector3d(4.5, 10.5, -1.5),
+            8);
+
+        List<ExplosiveBlockRuntime.FragmentVisual> visuals = groups.getFirst().visualBlocks();
+
+        assertEquals(1, visuals.size());
+        assertVectorEquals(new Vector3d(4.25, 10.0, -1.25), visuals.getFirst().position());
+        assertVectorEquals(new Vector3f(-0.25f, 0.0f, 0.25f),
+            visuals.getFirst().localPositionOffset());
     }
 
     @Test
@@ -131,10 +161,34 @@ class ExplosiveBlockRuntimeTest {
         List<ExplosiveBlockRuntime.FragmentVisual> visuals = groups.getFirst().visualBlocks();
 
         assertEquals(2, visuals.size());
-        assertVectorEquals(new Vector3d(0.5, 10.0, 0.5), visuals.get(0).position());
-        assertVectorEquals(new Vector3f(0.0f, -0.02f, 0.0f), visuals.get(0).localPositionOffset());
+        assertVectorEquals(new Vector3d(0.5, 10.0, 0.5), visuals.getFirst().position());
+        assertVectorEquals(new Vector3f(0.0f, -0.5f, 0.0f), visuals.get(0).localPositionOffset());
+        assertVisualSyncsToSpawnPosition(groups.getFirst(), visuals.get(0));
         assertVectorEquals(new Vector3d(0.5, 11.0, 0.5), visuals.get(1).position());
-        assertVectorEquals(new Vector3f(0.0f, 0.98f, 0.0f), visuals.get(1).localPositionOffset());
+        assertVectorEquals(new Vector3f(0.0f, 0.5f, 0.0f), visuals.get(1).localPositionOffset());
+        assertVisualSyncsToSpawnPosition(groups.getFirst(), visuals.get(1));
+    }
+
+    @Test
+    void verticalGroupedFragmentVisualCentersRotateAroundGroupCenter() {
+        ExplosiveBlockRuntime.FragmentGroup group = ExplosiveBlockRuntime.groupFragments(
+            List.of(
+                new ExplosiveBlockRuntime.FragmentBlock("Hytale:block/stone", 0, 10, 0),
+                new ExplosiveBlockRuntime.FragmentBlock("Hytale:block/stone", 0, 11, 0)
+            ),
+            new Vector3d(0.5, 10.5, 0.5),
+            8).getFirst();
+        List<ExplosiveBlockRuntime.FragmentVisual> visuals = group.visualBlocks();
+        org.joml.Quaternionf rotation = new org.joml.Quaternionf().rotateZ((float) (Math.PI / 2.0));
+
+        assertVisualCenterAfterSyncEqualsRotatedLocalCenter(group,
+            visuals.get(0),
+            rotation,
+            new Vector3d(1.0, 11.0, 0.5));
+        assertVisualCenterAfterSyncEqualsRotatedLocalCenter(group,
+            visuals.get(1),
+            rotation,
+            new Vector3d(0.0, 11.0, 0.5));
     }
 
     @Test
@@ -220,6 +274,12 @@ class ExplosiveBlockRuntimeTest {
         return field.getFloat(config);
     }
 
+    private static Object objectField(ExplosionConfig config, String fieldName)
+        throws ReflectiveOperationException {
+        Field field = field(fieldName);
+        return field.get(config);
+    }
+
     private static Field field(String fieldName) throws ReflectiveOperationException {
         Field field = ExplosionConfig.class.getDeclaredField(fieldName);
         field.setAccessible(true);
@@ -237,4 +297,28 @@ class ExplosiveBlockRuntimeTest {
         assertEquals(expected.y, actual.y, 0.0001f);
         assertEquals(expected.z, actual.z, 0.0001f);
     }
+
+    private static void assertVisualSyncsToSpawnPosition(
+        ExplosiveBlockRuntime.FragmentGroup group,
+        ExplosiveBlockRuntime.FragmentVisual visual) {
+        Vector3d center = group.center();
+        Vector3f offset = visual.localPositionOffset();
+        assertVectorEquals(visual.position(), new Vector3d(
+            center.x + offset.x,
+            center.y - visual.visualOriginOffsetY() + offset.y,
+            center.z + offset.z));
+    }
+
+    private static void assertVisualCenterAfterSyncEqualsRotatedLocalCenter(
+        ExplosiveBlockRuntime.FragmentGroup group,
+        ExplosiveBlockRuntime.FragmentVisual visual,
+        org.joml.Quaternionf rotation,
+        Vector3d expectedCenter) {
+        Vector3f rotatedOffset = rotation.transform(visual.localPositionOffset(), new Vector3f());
+        Vector3d syncedBasePosition = new Vector3d(group.center())
+            .add(rotatedOffset.x, rotatedOffset.y, rotatedOffset.z)
+            .sub(0.0, visual.visualOriginOffsetY(), 0.0);
+        assertVectorEquals(expectedCenter, syncedBasePosition.add(0.0, visual.visualOriginOffsetY(), 0.0));
+    }
+
 }
